slider overflow fixed

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -9,11 +9,20 @@ html {
 }
 
 body {
-    overflow-x: hidden;
+    overflow: hidden;
+    position: relative;
 }
 
 button {
     background-color: transparent;
     outline: none;
     border: none;
+}
+
+.cls-1 {
+    fill: none;
+}
+
+.cls-2 {
+    clip-path: url(#clip-path);
 }
