--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -7,7 +7,7 @@
         cursor: pointer;
         display: none;
         top: 3em;
-        right: 3em;
+        right: 2em;
         width: 1.5em;
         height: 1.5em;
 
