--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -3,10 +3,12 @@
 
 .slider-container {
     background-color: $accent-blue;
-    overflow: hidden;
+    max-width: 100vw;
+    overflow-x: hidden !important;
     border-top: 1px solid $dark-100;
     border-bottom: 1px solid $dark-100;
     height: 7em;
+    font-family: "Roboto Mono", monospace;
 
     .slider {
         display: flex;
@@ -28,7 +30,8 @@
             color: $dark-100;
             text-transform: uppercase;
             font-size: 1.625em;
-            font-weight: 700;
+            font-weight: 600;
+            position: relative;
 
             .dot {
                 width: 10px;
@@ -43,16 +46,24 @@
             }
 
             @include mq(small) {
-                font-size: 0.65em;
+                font-size: 1em;
+                font-weight: 600;
+            }
+
+            // it's for project needs
+            .ellipse {
+                position: absolute;
+                top: 0;
+                left: 0;
             }
         }
 
         @include mq(small) {
-            height: 4em;
+            height: 5em;
         }
     }
 
     @include mq(small) {
-        height: 4em;
+        height: 5em;
     }
 }
